Fix webkit overflow, remove ms styles

--- a/css/singlepage.css
+++ b/css/singlepage.css
@@ -2,6 +2,10 @@ section {
 	padding: 2em;
 }
 
+.content-area {
+	width: 100vw;
+}
+
 .showreel .parallax-layer-base {
 	background: #072e66;
 }
